--- a/foundations/intro-to-css/03-grouping-selectors/index.html
+++ b/foundations/intro-to-css/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button1>Click Me!</button1>
-    <button2>No, Click Me!</button2>
+    <button class="button1">Click Me!</button>
+    <button class="button2">No, Click Me!</button>
   </body>
 </html>
